--- a/src/app/components/pokemon-list/search-bar/search-bar.component.html
+++ b/src/app/components/pokemon-list/search-bar/search-bar.component.html
@@ -1,8 +1,8 @@
 <section>
-  <h2>Rechercher</h2>
+  <h2>Rechercher un pokémon</h2>
 
   <article>
-    <input type="text" />
-    <button>Search</button>
+    <input type="text" placeholder="Entrez le nom du pokémon à rechercher..." [(ngModel)]="pokemonName" (keydown.enter)="search()" />
+    <button (click)="search()">Chercher</button>
   </article>
 </section>
