feat: add pokemon data service

--- a/src/app/components/pokemon-list/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list/pokemon-list.component.html
@@ -1,1 +1,12 @@
 <app-search-bar></app-search-bar>
+
+@if (pokemonNamesList.length > 0) {
+  <ul>
+    @for (pokemon of pokemonNamesList; track $index) {
+      <li>{{pokemon.name}}</li>
+    }
+  </ul>
+}
+@else {
+  <p>Aucun Pokémon.</p>
+}
