feat: add pokemon list item component

--- a/src/app/components/pokemon-list/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list/pokemon-list.component.html
@@ -3,7 +3,10 @@
 @if (pokemonNamesList.length > 0) {
   <ul>
     @for (pokemon of pokemonNamesList; track $index) {
-      <li>{{pokemon.name}}</li>
+      <app-pokemon-list-item
+        [pokemon]="pokemon"
+      >
+      </app-pokemon-list-item>
     }
   </ul>
 }
