--- a/src/app/components/pokemon-list/search-bar/search-bar.component.scss
+++ b/src/app/components/pokemon-list/search-bar/search-bar.component.scss
@@ -5,7 +5,7 @@ section {
   padding: 20px 30px;
 
   border-radius: 10px;
-  background-color: rgb(247, 227, 224);
+  background-color: #f7e3e0;
 
   article {
     display: flex;
