feat: add lucide chevrons

--- a/src/app/components/pokemon-list/pagination/pagination.component.html
+++ b/src/app/components/pokemon-list/pagination/pagination.component.html
@@ -1,12 +1,20 @@
 <section>
-  <button><<</button>
-  <button><</button>
+  <button>
+    <lucide-angular name="chevrons-left" size="18" class="chevron"></lucide-angular>
+  </button>
+  <button>
+    <lucide-angular name="chevron-left" size="18" class="chevron"></lucide-angular>
+  </button>
   <button>1</button>
   <button>2</button>
   <button>3</button>
   <button>4</button>
   <button>5</button>
   <button>...</button>
-  <button>></button>
-  <button>>></button>
+  <button>
+    <lucide-angular name="chevron-right" size="18" class="chevron"></lucide-angular>
+  </button>
+  <button>
+    <lucide-angular name="chevrons-right" size="18" class="chevron"></lucide-angular>
+  </button>
 </section>
