--- a/src/app/components/pokemon-list/pagination/pagination.component.html
+++ b/src/app/components/pokemon-list/pagination/pagination.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="pages">
-    <button (click)="showPagesLeft()" [ngClass]="{ 'disabled' : currentPage < 3}" [disabled]="currentPage < 3">{{currentPage < 3 ? "" : "..."}}</button>
+    <button (click)="showPagesLeft()" [ngClass]="{ 'disabled' : currentPages.includes(1)}" [disabled]="currentPages.includes(1)">{{currentPages.includes(1) ? "" : "..."}}</button>
 
     @for (page of currentPages; track $index) {
       <button [ngClass]="{ 'current': currentPage === page }" [disabled]="currentPage === page" (click)="getPage(page)">
@@ -19,7 +19,7 @@
       </button>
     }
 
-    <button (click)="showPagesRight()" [ngClass]="{ 'disabled' : currentPage > totalPages - 2}" [disabled]="currentPage > totalPages - 2">{{currentPage > totalPages - 2 ? "" : "..."}}</button>
+    <button (click)="showPagesRight()" [ngClass]="{ 'disabled' : currentPages.includes(totalPages)}" [disabled]="currentPages.includes(totalPages)">{{currentPages.includes(totalPages) ? "" : "..."}}</button>
   </div>
 
   @if (currentPage < totalPages) {
