feat: add search pokemon event binding

--- a/src/app/components/pokemon-list/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list/pokemon-list.component.html
@@ -1,4 +1,4 @@
-<app-search-bar></app-search-bar>
+<app-search-bar (onSearch)="searchPokemon($event)"></app-search-bar>
 
 @if (pokemonNamesList.length > 0) {
   <ul>
