feat: add basic pokemon page

--- a/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.html
@@ -1,6 +1,8 @@
 <li>
-  <div></div>
-  <div class="name">
-    <p>{{ pokemon.name | titlecase }}</p>
-  </div>
+  <a [routerLink]="'pokemon/' + pokemonId">
+    <div></div>
+    <div class="name">
+      <p>{{ pokemon.name | titlecase }}</p>
+    </div>
+  </a>
 </li>
