--- a/src/app/components/shared/header/header.component.scss
+++ b/src/app/components/shared/header/header.component.scss
@@ -1,6 +1,14 @@
 header {
   padding: 10px 20px;
 
-  color: #ffffff;
   background-color: #cc0000;
+
+  a {
+    text-decoration: none;
+    color: #ffffff;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
 }
