--- a/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.html
@@ -1,8 +1,6 @@
-<li>
-  <a [routerLink]="'pokemon/' + pokemonId">
-    <div></div>
-    <div class="name">
-      <p>{{ pokemon.name | titlecase }}</p>
-    </div>
-  </a>
+<li (click)="goToPokemonPage(pokemon.url)">
+  <div></div>
+  <div class="name">
+    <p>{{ pokemon.name | titlecase }}</p>
+  </div>
 </li>
