feat: add loading ui component

--- a/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
+++ b/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
@@ -1,4 +1,7 @@
-@if (!pokemon) {
+@if (pageIsLoading) {
+  <app-loading></app-loading>
+}
+@else if (!pokemon) {
   <div class="not_found">
     <h1>Pokémon introuvable!</h1>
 
