feat: add loading animation

--- a/src/app/components/shared/ui/loading/loading.component.html
+++ b/src/app/components/shared/ui/loading/loading.component.html
@@ -1,3 +1,9 @@
-<div>
-  <p>Loading...</p>
-</div>
+<main>
+  <section>
+    <app-pokeball [animationDelay]="0"></app-pokeball>
+    <app-pokeball [animationDelay]="0.1"></app-pokeball>
+    <app-pokeball [animationDelay]="0.2"></app-pokeball>
+    <app-pokeball [animationDelay]="0.3"></app-pokeball>
+    <app-pokeball [animationDelay]="0.4"></app-pokeball>
+  </section>
+</main>
