feat: add images to list item

--- a/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.html
@@ -1,6 +1,9 @@
 <li (click)="goToPokemonPage(pokemon.url)">
-  <div></div>
+  <div class="image">
+    <img [src]="pokemonImg" alt="">
+  </div>
   <div class="name">
+    <div class="glow"></div>
     <p>{{ pokemon.name | titlecase }}</p>
   </div>
 </li>
