feat: add dynamic search

--- a/src/app/components/pokemon-list/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list/pokemon-list.component.html
@@ -14,5 +14,6 @@
   <p>Aucun Pokémon.</p>
 }
 
-<app-pagination (onChangePage)="updateList($event)">
-</app-pagination>
+@if (showPagination) {
+  <app-pagination (onChangePage)="updateList($event)"></app-pagination>
+}
