style: add empty pokemon list style

--- a/src/app/components/pokemon-list/pokemon-list/pokemon-list.component.html
+++ b/src/app/components/pokemon-list/pokemon-list/pokemon-list.component.html
@@ -11,7 +11,9 @@
   </ul>
 }
 @else {
-  <p>Aucun Pokémon.</p>
+  <div class="no_results">
+    <p>Aucun Pokémon.</p>
+  </div>
 }
 
 @if (showPagination) {
