--- a/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.scss
+++ b/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.scss
@@ -6,7 +6,9 @@ li {
   justify-content: space-between;
   align-items: center;
 
+  min-height: 150px;
   max-height: 290px;
+  height: 100%;
 
   border-radius: 5px;
 
