--- a/src/app/components/pokemon/pokemon-page/pokemon-page.component.scss
+++ b/src/app/components/pokemon/pokemon-page/pokemon-page.component.scss
@@ -38,13 +38,15 @@
 
 main {
   margin: 20px;
-  padding: 40px;
+  margin: 20px 5%;
+  padding: 30px;
 
   border-radius: 10px;
   background-color: #f0f0f0;
 
   .top_section {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     gap: 20px;
 
@@ -55,6 +57,27 @@ main {
         h1 {
           color: #cc0000;
           font-size: 50px;
+          margin-bottom: 10px;
+        }
+
+        h2 {
+          width: fit-content;
+
+          margin: 0 5px;
+          margin-top: 10px;
+          padding: 5px 10px;
+
+          border: #d8d8d8 solid;
+          border-width: 2px 2px 0 2px;
+          border-radius: 7px 7px 0 0;
+
+          background-color: #ffffff;
+        }
+
+        img {
+          max-width: 600px;
+          min-width: 150px;
+          width: 100%;
         }
 
         ul {
@@ -63,9 +86,34 @@ main {
 
         .types {
           display: flex;
-          gap: 5px;
+          flex-wrap: wrap;
+          gap: 10px;
         }
       }
+
+      .basic_infos {
+        margin: 20px 0;
+      }
+
+      .abilities,
+      .moves {
+        ul {
+          height: 150px;
+
+          border: 10px solid #d8d8d8;
+          border-radius: 5px;
+
+          background-color: #d8d8d8;
+
+          overflow-y: scroll;
+        }
+      }
+    }
+
+    .img_section {
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
