--- a/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
+++ b/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
@@ -31,7 +31,7 @@
           <ul>
             <li>Expérience de base : {{ pokemon.base_experience }}</li>
             <!-- TODO: create pipe(s) for height and weight conversions -->
-            <li>Taille : {{ pokemon.height * 10 }} cm</li>
+            <li>Taille : {{ pokemon.height | height }}</li>
             <li>Poids : {{ pokemon.weight / 10 }}kg</li>
           </ul>
         </article>
