feat: add weight conversion custom pipe

--- a/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
+++ b/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
@@ -32,7 +32,7 @@
             <li>Expérience de base : {{ pokemon.base_experience }}</li>
             <!-- TODO: create pipe(s) for height and weight conversions -->
             <li>Taille : {{ pokemon.height | height }}</li>
-            <li>Poids : {{ pokemon.weight / 10 }}kg</li>
+            <li>Poids : {{ pokemon.weight | weight }}</li>
           </ul>
         </article>
         <article class="abilities">
