--- a/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
+++ b/src/app/components/pokemon/pokemon-page/pokemon-page.component.html
@@ -60,6 +60,7 @@
 
     <section>
       <h2>Chaîne d'évolution</h2>
+      <app-evolution-chain [pokemonName]="pokemon.name"></app-evolution-chain>
     </section>
   </main>
 }
