feat: use pokemon list item for evolution chain

--- a/src/app/components/pokemon/evolution-chain/evolution-chain.component.html
+++ b/src/app/components/pokemon/evolution-chain/evolution-chain.component.html
@@ -1,5 +1,5 @@
 <ul>
   @for (evolution of evolutionChain; track $index) {
-    <li>{{ evolution }}</li>
+    <app-pokemon-list-item [pokemon]="evolution" [reloadPage]="true"></app-pokemon-list-item>
   }
 </ul>
