style: add pokemon list item active style

--- a/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.html
+++ b/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.html
@@ -1,4 +1,4 @@
-<li (click)="goToPokemonPage(pokemon.url)">
+<li (click)="goToPokemonPage(pokemon.url)" [ngClass]="{ 'active': active }">
   <div class="image">
     <img [src]="pokemonImg" alt="">
   </div>
