--- a/src/app/components/pokemon/evolution-chain/evolution-chain.component.html
+++ b/src/app/components/pokemon/evolution-chain/evolution-chain.component.html
@@ -1,6 +1,10 @@
 <ul>
   @for (evolution of evolutionChain; track $index) {
-    <app-pokemon-list-item [pokemon]="evolution" [reloadPage]="true"></app-pokemon-list-item>
+    <app-pokemon-list-item
+      [pokemon]="evolution"
+      [reloadPage]="true"
+      [active]="evolution.name === pokemonName"
+    ></app-pokemon-list-item>
 
     @if ($index !== evolutionChain.length - 1) {
       <li class="arrow">➡</li>
