--- a/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.scss
+++ b/src/app/components/pokemon-list/pokemon-list-item/pokemon-list-item.component.scss
@@ -66,3 +66,17 @@ li {
     }
   }
 }
+
+.active {
+  border: 2px solid #cc0000;
+  background-color: #d8d8d8;
+
+  &:hover {
+    cursor: auto;
+    background-color: #d8d8d8;
+
+    .glow {
+      transform: none;
+    }
+  }
+}
