--- a/src/app/components/pokemon/evolution-chain/evolution-chain.component.scss
+++ b/src/app/components/pokemon/evolution-chain/evolution-chain.component.scss
@@ -1,6 +1,6 @@
-ul {
+.one_evolution_chain {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   gap: 20px;
 
   margin-top: 20px;
@@ -8,15 +8,33 @@ ul {
 
   border-radius: 5px;
   background-color: #d8d8d8;
+}
 
-  .arrow {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.multiple_evolution_chain {
+  list-style: none;
 
-    list-style: none;
+  li {
+    ul {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
 
-    font-size: 50px;
-    color: #cc0000;
+      margin-top: 20px;
+      padding: 10px;
+
+      border-radius: 5px;
+      background-color: #d8d8d8;
+    }
   }
+}
+
+.arrow {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  list-style: none;
+
+  font-size: 50px;
+  color: #cc0000;
 }
