feat: changed title

--- a/src/app/components/pokemon/evolution-chain/evolution-chain.component.html
+++ b/src/app/components/pokemon/evolution-chain/evolution-chain.component.html
@@ -1,4 +1,4 @@
-<h2>Chaîne{{ evolutions.length > 0 ? "s" : "" }} d'évolution</h2>
+<h2>Évolutions</h2>
 
 @if (evolutionChain.length > 0) {
   <ul class="one_evolution_chain">
