--- a/src/app/components/pokemon/pokemon-page/pokemon-page.component.scss
+++ b/src/app/components/pokemon/pokemon-page/pokemon-page.component.scss
@@ -93,6 +93,45 @@ main {
 
       .basic_infos {
         margin: 20px 0;
+
+        ul {
+          li {
+            display: flex;
+            align-items: center;
+
+            width: fit-content;
+            height: 35px;
+
+            margin: 5px 0;
+            padding-right: 20px;
+
+            border-radius: 50px;
+            border: #c9c9c9 solid 2px;
+
+            background-color: #d8d8d8;
+            box-shadow: inset 0 0 1px 1px #ffffff;
+
+            .title {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+
+              height: 100%;
+
+              padding-left: 20px;
+
+              border-radius: 50px 0 0 50px;
+
+              background-color: #ffffff;
+            }
+
+            .slash {
+              width: 40px;
+              height: 100%;
+              background: linear-gradient(-45deg, transparent 50%, #ffffff 50%);
+            }
+          }
+        }
       }
 
       .abilities,
