style: add basic toolbox

--- a/src/app/components/pokemon/pokemon-type/pokemon-type.component.html
+++ b/src/app/components/pokemon/pokemon-type/pokemon-type.component.html
@@ -1,3 +1,15 @@
-<li [ngClass]="type.name">
+<li class="main" [ngClass]="type.name">
   {{ (typeFrenchName !== "" ? typeFrenchName : type.name) | uppercase }}
+
+  <div class="toolbox_container">
+    <div class="pointer"></div>
+    <div class="toolbox">
+      <ul>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+      </ul>
+    </div>
+  </div>
 </li>
