--- a/src/app/components/pokemon/pokemon-type/pokemon-type.component.scss
+++ b/src/app/components/pokemon/pokemon-type/pokemon-type.component.scss
@@ -1,4 +1,8 @@
-li {
+$shadow: 0 5px 10px 0 #929292;
+
+.main {
+  position: relative;
+
   padding: 3px 15px;
 
   color: #ffffff;
@@ -6,6 +10,52 @@ li {
   text-shadow: 0 0 10px #000000;
 
   border-radius: 30px;
+
+  .toolbox_container {
+    position: absolute;
+    top: 0;
+    left: -25%;
+
+    width: 150%;
+    height: fit-content;
+
+    margin-top: 27px;
+
+    .pointer {
+      position: absolute;
+      top: 0;
+      left: 45%;
+
+      width: 10px;
+      height: 10px;
+
+      transform: rotate(45deg);
+
+      background-color: #ffffff;
+      box-shadow: $shadow;
+    }
+
+    .toolbox {
+      position: relative;
+
+      width: 100%;
+      height: 100%;
+
+      margin-top: 5px;
+      padding: 10px;
+
+      border-radius: 10px;
+
+      background-color: #ffffff;
+      box-shadow: $shadow;
+
+      li {
+        list-style: none;
+        color: #000000;
+        text-shadow: none;
+      }
+    }
+  }
 }
 
 .normal {
