--- a/src/app/components/pokemon/pokemon-type/pokemon-type.component.scss
+++ b/src/app/components/pokemon/pokemon-type/pokemon-type.component.scss
@@ -42,19 +42,49 @@ $shadow: 0 5px 10px 0 #929292;
       height: 100%;
 
       margin-top: 5px;
-      padding: 10px;
+      padding: 7px;
 
       border-radius: 10px;
 
       background-color: #ffffff;
       box-shadow: $shadow;
 
-      li {
-        list-style: none;
-        color: #000000;
-        text-shadow: none;
+      ul {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        li {
+          list-style: none;
+          color: #000000;
+          text-shadow: none;
+
+          display: flex;
+          align-items: center;
+          gap: 2px;
+
+
+          .dots {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 5px;
+
+            transform: translateY(-2px);
+
+            .dot {
+              width: 10px;
+              height: 10px;
+
+              border-radius: 100%;
+            }
+          }
+        }
       }
     }
+  }
+
+  &:hover {
+    cursor: pointer;
   }
 }
 
