--- a/src/app/components/pokemon/pokemon-page/pokemon-page.component.scss
+++ b/src/app/components/pokemon/pokemon-page/pokemon-page.component.scss
@@ -134,25 +134,36 @@ main {
         }
       }
 
-      .abilities,
-      .moves {
-        ul {
-          height: 150px;
-
-          border: 10px solid #d8d8d8;
-          border-radius: 5px;
-
-          background-color: #d8d8d8;
-
-          overflow-y: scroll;
-        }
-      }
     }
 
     .img_section {
       display: flex;
       justify-content: center;
       align-items: center;
+    }
+  }
+
+  .abilities_moves_section {
+    display: flex;
+    justify-content: space-between;
+    gap: 50px;
+
+    margin-bottom: 30px;
+
+    .abilities,
+    .moves {
+      flex: 1;
+
+      ul {
+        height: 150px;
+
+        border: 10px solid #d8d8d8;
+        border-radius: 5px;
+
+        background-color: #d8d8d8;
+
+        overflow-y: auto;
+      }
     }
   }
 }
